Fixed Spacing In Game Show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,10 @@
   height: 200px;
   width: 100%;
 }
+
+.show-header {
+  font-size: 40px;
+}
 .nextButton {
   border: 8px solid #CACCCD;
   border-radius: 50%;
